# Deep-Learning-project

./: README.md
truth_through_debate/__MACOSX/truth_through_debate/data/: ._fever_loader.py
truth_through_debate/truth_through_debate/: .env.example  .gitignore  Truth_Through_Debate_Colab.ipynb  demo.py  requirements.txt  run_experiment.py
truth_through_debate/truth_through_debate/agents/: __init__.py  debater.py  judge.py  retriever.py
truth_through_debate/truth_through_debate/data/: __init__.py  fever_loader.py  sample_claims.py
truth_through_debate/truth_through_debate/debate/: __init__.py  engine.py
truth_through_debate/truth_through_debate/evaluation/: __init__.py  evaluator.py  metrics.py
truth_through_debate/truth_through_debate/experiments/: baseline.py  debate_system.py
truth_through_debate/truth_through_debate/utils/: __init__.py  llm_client.py  logger.py
ttd_v2/__MACOSX/ttd_v2/truth_through_debate/: ._cli.py
ttd_v2/ttd_v2/: .env.example  .gitignore  README.md  pyproject.toml
ttd_v2/ttd_v2/.github/workflows/: ci.yml
ttd_v2/ttd_v2/notebooks/: Truth_Through_Debate_v2.ipynb
ttd_v2/ttd_v2/tests/: test_calibration.py  test_core.py
ttd_v2/ttd_v2/truth_through_debate/: __init__.py  cli.py  config.py  pipeline.py  schema.py
ttd_v2/ttd_v2/truth_through_debate/agents/: debate_agents.py  llm_client.py
ttd_v2/ttd_v2/truth_through_debate/calibration/: platt.py
ttd_v2/ttd_v2/truth_through_debate/evaluation/: evaluator.py  fever_loader.py
ttd_v2/ttd_v2/truth_through_debate/retrieval/: hybrid_retriever.py
ttd_v2/ttd_v2/truth_through_debate/ui/: app.py
